using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class TerritorialSMUtility  {

	public static class ParameterNames
	{
		public const string AttackTorque = "AttackTorque";
		public const string ReturnToHomeTorque = "ReturnToHomeTorque";
		public const string RotateTorque = "RotateTorque";
		public const string RotationAmount = "RotateAmount";
		public const string NegativeRotationAmount = "NegativeRotationAmount";
		public const string ReturningToHome = "ReturningToHome";
		public const string AtHome = "AtHome";
		public const string RelativeBearingToHome = "RelativeBearingToHome";
		public const string DistanceFromHome = "DistanceFromHome";
		public const string TerritoryPenetrated = "TerritoryPenetrated";
		public const string ObjectLocation = "ObjectLocation";
		public const string TempRotationAmount = "TempRotationAmount";
		public const string TempNegativeRotationAmount = "TempNegativeRotationAmount";
	}


}
